--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merry Christmas</title>
+    <link rel="shortcut icon" href="./images/christmas-bell.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="text/javascript" src="script.js"></script>
@@ -33,8 +34,18 @@
         <div class="snowman"></div>
         <div class="reindeer"></div>
         <div class="reindeer2"></div>
+        <div class="reindeer3"></div>
+        <div class="reindeer4"></div>
+        <div class="reindeer5"></div>
+        <div class="reindeer6"></div>
+        <div class="big_santa"></div>
+        <div class="penguin"></div>
+        <div class="ground"></div>
+        <div class="flying_reindeer"></div>
+        <div class="house"></div>
+        <div class="santa3"></div>
         <h2 class="content__title no-select">
-            <span class="content__title-sub">Merry Christmas</span>
+            <span class="content__title-sub">Merry Christmas Xuân Moi</span>
         </h2>
     </div>
 </body>
